@@ -312,17 +312,19 @@ table.budget.result td:nth-of-type(3)		{width:500px; padding-right:0px;}
 .wrap_policy_marker table.budget th.policy_code,
 .wrap_policy_marker table.budget td.policy_code		{width:480px; padding-right:40px;}
 .wrap_policy_marker table.budget th.policy_sig,
-.wrap_policy_marker table.budget td.policy_sig		{text-transform:capitalize;}	
+.wrap_policy_marker table.budget td.policy_sig		{width:160px; text-transform:capitalize;}	
 
 /*	IATI ACTIVITY TAG TABLE	*/
 .wrap_tag table.budget th.tag_code,
 .wrap_tag table.budget td.tag_code		{width:480px; padding-right:40px;}
 .wrap_tag table.budget th.tag_vocab,
-.wrap_tag table.budget td.tag_vocab		{width:200px; padding-right:40px;}
+.wrap_tag table.budget td.tag_vocab		{width:160px;}
 
 /*	IATI ACTIVITY RELATED ACTIVITY TABLE	*/
 .wrap_related_activity th.related_ref,
 .wrap_related_activity td.related_ref	{width:480px; padding-right:40px;}
+.wrap_related_activity th.related_type,
+.wrap_related_activity td.related_type	{width:160px;}
 
 /*	DEFAULTS MODALITIES	*/
 table.modals					{table-layout:fixed; border-collapse:collapse; width:100%;}
