@@ -5,6 +5,7 @@ Update comments
 Add tag to new SAVi
 Update css
 Add related-activity
+Add activity-status
 
 
 Development Portal (2020-02-05 shi)
